src/assets/common/scss/global/_header.scss
#header-bg {
  box-shadow: 0px 6px 12px -8px #c2c2c2;
}

.header-topo {
  font-weight: 500;
  text-align: center;
  padding: 10px;
  background-color: var(--cor-12);
  color: var(--cor-0);
  text-transform: uppercase;
  margin-bottom: 10px;
}

.header-container {
  font-family: Poppins, sans-serif;
  font-weight: 500;
  padding-top: 12px;
  padding-bottom: 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
}

.header-menu {
  display: flex;
  align-items: center;
  gap: 30px;
  position: relative;
}

.header-menu a:hover,
.header-container i:hover {
  color: var(--cor-p1);
}

.roupas > a,
.acessorios > a,
.calcados > a {
  display: flex;
  align-items: center;
  gap: 10px;
}

.roupas-menu,
.acessorios-menu,
.calcados-menu {
  display: none;
  position: absolute;
  background-color: var(--cor-2);
  padding: 20px;
  border-radius: 4px;
  font-size: 14px;
}

.roupas-menu::before,
.acessorios-menu::before,
.calcados-menu::before {
  content: "";
  display: block;
  position: absolute;
  top: -8px;
  width: 0px;
  height: 0px;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid var(--cor-2);
}

@media (min-width: 801px) {
  .roupas:hover .roupas-menu,
  .acessorios:hover .acessorios-menu,
  .calcados:hover .calcados-menu {
    display: flex;
    flex-direction: column;
    gap: 20px;
    animation: cima-baixo 0.3s forwards;
  }
  .all {
    display: none;
  }
}

.roupas-menu a,
.acessorios-menu a,
.calcados-menu a {
  border-bottom: 2px solid #d7d7d7;
}

.header-buttons {
  display: flex;
  align-items: center;
  gap: 15px;
  position: relative;
}

.header-buttons button {
  cursor: pointer;
  border: none;
  background: none;
}

.header-buttons li {
  cursor: pointer;
}

.search {
  position: absolute;
  top: 60px;
  right: 0;
  display: flex;
  gap: 4px;
  align-items: center;
}

.search input,
.search button {
  padding: 10px;
  border-radius: 4px;
  border: 1px solid #b7b7b7;
}

.search input {
  width: 340px;
}

.search button i {
  color: #b7b7b7;
}

@media (max-width: 800px) {
  #header-bg {
    position: fixed;
    z-index: 100;
    width: 100%;
    padding-bottom: 80px;
    background-color: var(--cor-0);
  }
  .header-menu {
    display: none;
  }

  .header-dropdown-menu {
    gap: 0px;
  }

  .search input {
    width: 200px;
  }

  .roupas-menu,
  .acessorios-menu,
  .calcados-menu {
    padding: 0.6rem;
  }

  .roupas.active .roupas-menu,
  .acessorios.active .acessorios-menu,
  .calcados.active .calcados-menu {
    position: initial;
    display: flex;
    flex-direction: column;
    animation: cima-baixo 0.6s forwards;
    box-shadow: 0px 6px 12px -8px #c2c2c2;
  }
  .roupas-menu::before,
  .acessorios-menu::before,
  .calcados-menu::before {
    display: none;
  }
}

@media (max-width: 800px) {
  .header-menu {
    position: absolute;
    width: 100%;
    top: 70px;
    right: 0px;
    background: #e7e7e7;
    z-index: 1000;
    height: 0px;
    visibility: hidden;
    overflow-y: hidden;
  }

  #nav.active .header-menu {
    top: 20px;
    margin-top: 35px;
    display: block;
    height: calc(100vh);
    visibility: visible;
    overflow-y: auto;
    animation: cima-baixo 0.6s forwards;
  }

  .header-menu a {
    display: block;
    padding: 1rem 0;
    margin: 0 2rem;
    border-bottom: 2px solid #0000000d;
  }

  .header-menu i {
    margin-left: 10px;
  }

  #btn-mobile {
    display: flex;
    padding: 0.6rem;
    font-size: 1rem;
    border: none;
    background: none;
    cursor: pointer;
    gap: 0.5rem;
  }
  #hamburger {
    border-top: 2px solid;
    width: 20px;
  }
  #hamburger::after,
  #hamburger::before {
    content: "";
    display: block;
    width: 20px;
    height: 2px;
    background: currentColor;
    margin-top: 5px;
    transition: 0.3s;
    position: relative;
  }
  .header-buttons.active #hamburger {
    border-top-color: transparent;
  }
  .header-buttons.active #hamburger::before {
    transform: rotate(135deg);
  }
  .header-buttons.active #hamburger::after {
    transform: rotate(-135deg);
    top: -7px;
  }
}

@keyframes cima-baixo {
  from {
    transform: translate3d(0, -30px, 0);
    opacity: 0;
  }
  to {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}

// User

.user {
  display: none;
  position: absolute;
  right: 30px;
  top: 60px;
  background-color: var(--cor-0);
  padding: 40px;
  border-radius: 4px;
  box-shadow: 0 0 4px 5px #0000001a;
  z-index: 100;
  margin-left: 30px;
  &.ativo {
    display: flex;
    flex-direction: column;
    gap: 14px;
    animation: cima-baixo 0.3s forwards;
  }
  input {
    padding: 8px;
    border-radius: 4px;
    border: 1px solid var(--cor-4);
  }
  button {
    padding: 12px 6px;
    border-radius: 4px;
    border: none;
    background-color: var(--cor-p1);
    cursor: pointer;
  }
  .register {
    display: flex;
    flex-wrap: wrap;
    gap: 8px;
  }
}

/* Shopping cart */
#shopping {
  display: none;
  flex-direction: column;
  gap: 18px;
  position: absolute;
  z-index: 100;
  height: 580px;
  width: 300px;
  right: 30px;
  top: 60px;
  box-shadow: 0 0 4px 5px rgba(0, 0, 0, 0.1);
  background-color: var(--cor-1);
  border-radius: 4px;
  animation: menu-mobile 0.3s forwards;
  overflow-y: auto;
  box-sizing: border-box;

  &.ativo {
    display: flex;
    animation: cima-baixo 0.3s forwards;
  }

  button {
    cursor: pointer;
  }

  &::-webkit-scrollbar {
    width: 12px;
  }
  &::-webkit-scrollbar {
    width: 12px;
  }

  &::-webkit-scrollbar-track {
    background: var(--cor-0);
  }
  &::-webkit-scrollbar {
    width: 12px;
  }

  &::-webkit-scrollbar-track {
    background: var(--cor-0);
  }

  &::-webkit-scrollbar-thumb {
    background-color: var(--cor-p2);
    border-radius: 20px;
    border: 2px solid var(--cor-0);
  }
}

.close-shopping {
  position: absolute;
  display: block;
  content: "";
  width: 24px;
  height: 24px;
  background: url(/arquivos/excluir.png) no-repeat center;
  z-index: 10;
  top: 5px;
  left: 5px;
  padding: 8px;
  border-radius: 50%;
  background-color: var(--cor-0);
  cursor: pointer;
  border: 1px solid #fff;
}

.shopping-header {
  background-color: var(--cor-p2);
  padding: 14px;
  text-align: center;
  color: var(--cor-0);
  h3{
    font-weight: bold;
    font-size: 20px;
  }
}

.shopping-item {
  align-items: flex-start;
  display: flex;
  gap: 8px;
  position: relative;
  padding: 20px 10px;

  img {
    width: 90px;
  }

  &::after {
    content: "";
    position: absolute;
    display: block;
    width: 90%;
    height: 2px;
    background-color: var(--cor-3);
    bottom: 0px;
  }
}

.shopping-item-info {
  display: flex;
  flex-direction: column;
  gap: 14px;
}

.href-product {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.quant-trash {
  display: flex;
  align-items: center;
  gap: 20px;
}

.shopping-quantidade span,
.shopping-quantidade button {
  background-color: var(--cor-0);
  border: 1px solid var(--cor-3);
  padding: 8px;
  text-align: center;
  font-size: 14px;
  padding: 8px;
  border-radius: 4px;
}

.shopping-quantidade span {
  margin: 0 4px;
  border-radius: 0;
}

.trash {
  max-width:40px;
  cursor: pointer;
  padding: 8px;
}

.subtotal-price {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}

.checkout,
.empty {
  padding: 20px;
  font-weight: bold;
}

.checkout button {
  padding: 12px;
  font-size: 16px;
  font-weight: bold;
  text-align: center;
  width: 100%;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  background-color: var(--cor-p2);
  color: var(--cor-0);
}

.checkout.hidden {
  display: none;
}

.empty {
  font-size: 18px;
  text-align: center;
  border: 2px solid var(--cor-3);
  margin-left: 10px;
  margin-right: 10px;
}

#cart-length {
  text-align: center;
  z-index: 1;
  position: absolute;
  right: 5px;
  top: -25px;
  background-color: var(--cor-p1);
  padding: 3px 8px;
  border-radius: 50%;
  color: var(--cor-0);
  font-weight: bold;
}

@media (max-width: 800px) {
  #cart-length {
    right: 40px;
    top: -20px;
  }
}
@media (max-width: 350px) {
  #shopping {
    width: 270px;
  }
}

